# swift_cpp_interop

./: README.md
CppLib/: .gitignore  CMakeLists.txt  CppLib.cpp  output_file.txt
CppLib/cmake/: generate_xcframework.cmake  test.cmake
CppLib/include/: CppLib.h
CppLib/include/class/: test_class.h  unused_class.h
CppLib/include/type/: test_type.h
CppLib/inputs/: module.modulemap.in
Frameworks/CppLib.xcframework/: Info.plist
Frameworks/CppLib.xcframework/macos-arm64/Headers/: CppLib.h  module.modulemap
SwiftApp/SwiftApp/: main.swift
SwiftApp/SwiftApp.xcodeproj/: project.pbxproj
